desenv_tests/test-assets/field/failure/nested_with_additional_modifiers.stderr
error: cannot set `rename` or `separator` modifiers on a field marked as `nested`
 --> test-assets/field/failure/nested_with_additional_modifiers.rs:5:5
  |
5 |     #[desenv(nested, rename = "renamed")]
  |     ^
