desenv_tests/test-assets/field/failure/nested_with_additional_modifiers.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(nested, rename = "renamed")]
    field: String
}

fn main(){}